# fully-homomorphic-encryption

./: .gitignore  LICENSE  README
doc/: copying.txt  papers.txt
src/: CMakeLists.txt  FullHomCrypt.cpp  jobmanager.cpp  jobmanager.h
src/calculation/: fullhom.cpp  fullhom.h  multiplication.cpp  tools.cpp
src/communication/: commclient.cpp  commserver.cpp  commserver.h  fhe_mpi.cpp  fhe_mpi.h
src/include/: commclient.h  commserver.h  fhe_mpi.h  fullhom.h  multiplication.h  tools.h
src/tools/: commserver.cpp  fhe_mpi.cpp  fullhom.cpp  multiplication.cpp  tools.cpp
var/: run.sh
